--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -14,6 +14,7 @@
                   <GridPane layoutX="31.0" layoutY="87.0" prefHeight="398.0" prefWidth="295.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints vgrow="NEVER" />
@@ -36,23 +37,25 @@
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin></Button>
-                        <Label text="Орабатываемые файлы" GridPane.rowIndex="6">
+                        <Label text="Орабатываемые файлы" GridPane.columnSpan="2" GridPane.rowIndex="6">
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin></Label>
-                        <Label fx:id="templateLabel" text="Label" GridPane.rowIndex="2">
+                        <Label fx:id="templateLabel" text="Label" GridPane.columnSpan="2" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin></Label>
-                        <ListView fx:id="processedList" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8">
+                        <ListView fx:id="processedList" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="8">
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin></ListView>
-                        <Button mnemonicParsing="false" onAction="#process" text="Обработать" GridPane.halignment="CENTER" GridPane.rowIndex="9">
+                        <Button mnemonicParsing="false" onAction="#process" text="Обработать" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="9">
                            <GridPane.margin>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                            </GridPane.margin>
                         </Button>
+                        <ComboBox fx:id="templateEncoding" prefWidth="150.0" promptText="Кодировка файла" GridPane.columnIndex="1" />
+                        <ComboBox fx:id="processListEncoding" prefWidth="150.0" promptText="Кодировка файла" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                      </children>
                   </GridPane>
                </children>
